# NYMPH_HandOff_Package_RevA2

./: .gitignore  DAY1_COMPLETE.md  DAY2_COMPLETE.md  DAY3_COMPLETE.md  DAY4_COMPLETE.md  DAY5_COMPLETE.md  DAY6_COMPLETE.md  DAY7_COMPLETE.md  DAY8_COMPLETE.md  DAY9_COMPLETE.md  Dockerfile.dev  NYMPH_IP_Manifest.template.json  README.md  SETUP_GIT.md  docker-compose.yml
buildroot-configs/: README.md  build-image.sh  dts-integration.sh  nymph-rk3588_defconfig
docs/: API_Specification.md  Acceptance_Matrix.md  Build_Guide.md  Build_Pipeline.md  Change_Tolerance_Sheet.md  Day1_Progress.md  Day2_Progress.md  Day3_Progress.md  Day4_Progress.md  Day5_Progress.md  Day6_Progress.md  Day7_Progress.md  Day8_Progress.md  Day9_Progress.md  Driver_Development.md  Firmware_Architecture.md  Hardware_Specification.md  Milestones_and_Evaluation.md  PCIe_Driver_Guide.md  Windows_Tuning.md
hardware/: pmbus-tps53667.dtsi  rk3588-nymph.dts  schematic_refs.md  stm32-mcufan.dtsi  switchtec-overlay.dtsi
repo/agent/: CMakeLists.txt
repo/agent/include/: ai_onnx.hpp  fabric_zlta.hpp  kvpin.hpp  logger.hpp  nymph_api.hpp  sair_vault.hpp  thermal_stdio.hpp
repo/agent/src/: ai_onnx.cpp  fabric_zlta.cpp  kvpin.cpp  main_agent.cpp  nymph_api.cpp  sair_vault.cpp  thermal_stdio.cpp
tools/: attestation_check.sh  bench-run.sh  build.bat  build.sh  buildroot_setup.sh  clean.bat  clean.sh  dma_vs_copy.py  enumerate_pcie.sh  ota_update.sh  run_local.bat  run_local.sh  test_pcie_driver.sh  test_pcie_ioctl.c  thermal_stress.sh  verify_reproducibility.ps1  verify_reproducibility.sh
(+7 files in other folders)
